project(Cassandra-C++11-Api)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -g")

# cpp-driver
set(_CPP_DRIVER_INC_HINTS ${CPP_DRIVER_INCLUDE_DIR} ENV CPP_DRIVER_INCLUDE_DIR)
find_path(CPP_DRIVER_INCLUDE_DIR
NAMES cassandra.h
HINTS ${_CPP_DRIVER_INC_HINTS}
PATH_SUFFIXES include)
set(_CPP_DRIVER_LIB_HINTS ${CPP_DRIVER_LIB_DIR} ENV CPP_DRIVER_LIB_DIR)
find_library(CPP_DRIVER_LIB_DIR
NAMES cassandra libcassandra
HINTS ${_CPP_DRIVER_LIB_HINTS}
PATH_SUFFIXES lib)
set(LIBS ${LIBS} ${CPP_DRIVER_LIB_DIR})

# libuv
set(_LIBUV_ROOT_HINTS ${LIBUV_ROOT_DIR} ENV LIBUV_ROOT_DIR)
if(WIN32)
set(_LIBUV_ROOT_PATHS "${PROJECT_SOURCE_DIR}/lib/libuv/")
set(_LIBUV_ROOT_HINTS_AND_PATHS HINTS ${_LIBUV_ROOT_HINTS} PATHS ${_LIBUV_ROOT_PATHS})
else()
set(_LIBUV_ROOT_PATHS "/usr/" "/usr/local/")
set(_LIBUV_ROOT_HINTS_AND_PATHS HINTS ${_LIBUV_ROOT_HINTS} PATHS ${_LIBUV_ROOT_PATHS})
endif()
find_path(LIBUV_INCLUDE_DIR
NAMES uv.h
HINTS ${_LIBUV_INCLUDEDIR} ${_LIBUV_ROOT_HINTS_AND_PATHS}
PATH_SUFFIXES include)
find_library(LIBUV_LIBRARY
NAMES uv libuv
HINTS ${_LIBUV_LIBDIR} ${_LIBUV_ROOT_HINTS_AND_PATHS}
PATH_SUFFIXES lib)
set(LIBUV_LIBRARIES ${LIBUV_LIBRARY})
set(INCLUDES ${INCLUDES} ${LIBUV_INCLUDE_DIR})
set(LIBS ${LIBS} ${LIBUV_LIBRARIES})

# boost
find_package(Boost 1.51)

include_directories(${CPP_DRIVER_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

add_subdirectory(src)
